Reformated code