@@ -29,8 +29,8 @@ import java.util.stream.Collectors;
  */
 public class ScoreWithGoldFrames {
 
-	private static final Logger logger = LoggerFactory
-			.getLogger(ScoreWithGoldFrames.class);
+	private static final Logger logger = LoggerFactory.getLogger(
+			ScoreWithGoldFrames.class);
 
 	private static final String TAB = "\t";
 	private static final int SENTENCE_FIELD = 7;
@@ -53,8 +53,8 @@ public class ScoreWithGoldFrames {
 		logger.info("Extracting gold frame testing splits...");
 		logger.info("	from: " + frameSplitsPath);
 		List<String> frameSplits = score.getFrameSplits(frameSplitsPath);
-		Map<Integer, List<String>> frameSplitsMap = score
-				.getFrameSplitsMap(frameSplits);
+		Map<Integer, List<String>> frameSplitsMap = score.getFrameSplitsMap(
+				frameSplits);
 		logger.info("Done extracting gold frame testing splits");
 		logger.info("Extracting argument identification alphabet...");
 		logger.info("	from: " + alphabetFilename);
@@ -68,37 +68,38 @@ public class ScoreWithGoldFrames {
 		logger.info("Initializing decoder...");
 		logger.info("	from: " + argModelFilename);
 		logger.info("	and from: " + alphabetFilename);
-		final Decoding decoder = Decoding
-				.fromFile(argModelFilename, alphabetFilename);
+		final Decoding decoder = Decoding.fromFile(argModelFilename,
+												   alphabetFilename);
 		logger.info("Done initializing decoder");
 		List<String> tokenizedSplits = score.getTokenizedSplits(sentences);
 		List<String> depParsedSplits = score.getDepParsedSplits(sentences);
-		Range0Based range =
-				new Range0Based(0, sentences.size(), false);
+		Range0Based range = new Range0Based(0, sentences.size(), false);
 
 		logger.info("Done initializing parser");
 
 		score.runWithGoldFrames(sentences, frameSplitsMap, argIdFeatureIndex,
-				feDict, decoder, kBest, depParsedSplits,
-				tokenizedSplits, range, outputXmlFilePath);
+								feDict, decoder, kBest, depParsedSplits,
+								tokenizedSplits, range, outputXmlFilePath);
 	}
 
 	private void runWithGoldFrames(List<Sentence> sentences,
-			Map<Integer, List<String>> frameSplitsMap,
-			Map<String, Integer> argIdFeatureIndex, FEDict feDict,
-			Decoding decoder, int kBest, List<String> depParsedSplits,
-			List<String> tokenizedSplits, Range range,
-			String outputXmlFilePath) throws IOException {
+								   Map<Integer, List<String>> frameSplitsMap,
+								   Map<String, Integer> argIdFeatureIndex,
+								   FEDict feDict, Decoding decoder, int kBest,
+								   List<String> depParsedSplits,
+								   List<String> tokenizedSplits, Range range,
+								   String outputXmlFilePath)
+			throws IOException {
 		logger.info("Scoring with gold frames...");
 		logger.info("Predicting arguments...");
-		List<String> predictedFESplits = StaticSemafor
-				.predictAllArguments(sentences, frameSplitsMap,
-						argIdFeatureIndex, feDict, decoder, kBest);
+		List<String> predictedFESplits = StaticSemafor.predictAllArguments(
+				sentences, frameSplitsMap, argIdFeatureIndex, feDict, decoder,
+				kBest);
 		logger.info("Done predicting arguments");
-		logger.info("Preparing gold FullTextAnnotation XML file for evaluation...");
-		Document outputDoc = PrepareFullAnnotationXML
-				.createXMLDoc(predictedFESplits, range, depParsedSplits,
-						tokenizedSplits);
+		logger.info(
+				"Preparing gold FullTextAnnotation XML file for evaluation...");
+		Document outputDoc = PrepareFullAnnotationXML.createXMLDoc(
+				predictedFESplits, range, depParsedSplits, tokenizedSplits);
 		XmlUtils.writeXML(outputXmlFilePath, outputDoc);
 		logger.info("Done preparing gold FullTextAnnotation XML file");
 	}
@@ -106,37 +107,39 @@ public class ScoreWithGoldFrames {
 	private List<Sentence> getSentences(String depParsedSplitsPath)
 			throws FileNotFoundException {
 		File depParsedSplitsFile = new File(depParsedSplitsPath);
-		SentenceCodec.SentenceIterator sentenceIterator =
-				new SentenceCodec.SentenceIterator(
+		SentenceCodec.SentenceIterator sentenceIterator = new SentenceCodec.SentenceIterator(
 				SentenceCodec.ConllCodec, depParsedSplitsFile);
 		return Lists.newArrayList(sentenceIterator);
 	}
 
 	private List<String> getTokenizedSplits(List<Sentence> sentences) {
 		return sentences.stream().map(sentence -> String.join(" ",
-				sentence.getTokens().stream().map(token -> token.getForm())
-						.collect(Collectors.toList())))
-				.collect(Collectors.toList());
+															  sentence.getTokens()
+																	  .stream()
+																	  .map(token -> token
+																			  .getForm())
+																	  .collect(
+																			  Collectors
+																					  .toList())))
+						.collect(Collectors.toList());
 	}
 
 	private List<String> getDepParsedSplits(List<Sentence> sentences) {
 		return sentences.stream().map(sentence -> AllLemmaTags
-				.makeLine(sentence.toAllLemmaTagsArray()))
-				.collect(Collectors.toList());
+				.makeLine(sentence.toAllLemmaTagsArray())).collect(
+				Collectors.toList());
 	}
 
-	private Map<Integer, List<String>> getFrameSplitsMap(List<String> frameSplits) {
-		return frameSplits
-				.stream()
-				.collect(Collectors
-						.groupingBy(frameSplit ->
-								Integer.parseInt(frameSplit
-										.split(TAB)[SENTENCE_FIELD])));
+	private Map<Integer, List<String>> getFrameSplitsMap(
+			List<String> frameSplits) {
+		return frameSplits.stream().collect(Collectors.groupingBy(
+				frameSplit -> Integer
+						.parseInt(frameSplit.split(TAB)[SENTENCE_FIELD])));
 	}
 
 	private List<String> getFrameSplits(String frameSplitsPath)
 			throws IOException {
-		return Files.lines(Paths.get(frameSplitsPath))
-				.collect(Collectors.toList());
+		return Files.lines(Paths.get(frameSplitsPath)).collect(
+				Collectors.toList());
 	}
 }
